.history/matrix-service/templates/ingress_20260322155155.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-service
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matrix-service
                port:
                  number: 80
